2002-01-03  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_save_as_real): create
	a backup copy of the file before saving
	(gedit_document_has_selected_text): new function
	
	* gedit-document.h (gedit_document_has_selected_text): new 
	prototype

	* gedit-prefs.[ch]: preferences for printing support added

	* gedit-print.c: rewritten, now gedit2 has a basic printing
	support

	* dialog/gedit-preferences-dialog.c: added a Save page

	* dialogs/gedit-preferences.glade2: ditto

2001-12-29  Paolo Maggi  <maggi@athena.polito.it>
	
	* gedit-prefs.[ch]: rewritten

	* gedit-mdi.c: use new preference names
	
	* gedit-undo-manager.c: ditto

	* gedit-view.c: ditto
     
	* dialogs/gedit-preferences-dialog.c: ditto

2001-12-19  Paolo Maggi  <maggi@athena.polito.it>

	* bonobo-mdi.c (bonobo_mdi_init_instance): force tab position to be top

	* gedit-mdi.c (gedit_mdi_init): ditto
	
	* gedit-document.c: fixed some bugs when dealing with readonly docs
	
2001-12-17  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-commands.c (gedit_cmd_search_replace): call gedit_dialog_replace ()

	* gedit-document.c: added last_replace_text and last_search_was_case_sensitive
	fields to GeditDocumentPrivate
	(gedit_document_finalize): free last_replace_text
	(gedit_document_get_short_name): return the right value when  doc->priv->uri != NULL
	(gedit_document_begin_user_action): new public function
	(gedit_document_end_user_action): ditto
	(gedit_document_get_last_searched_text): call gedit_debug
	(gedit_document_get_last_replace_text): new public function
	(gedit_document_find): cleaned
	(gedit_document_get_selected_text): new public function
	(gedit_document_replace_selected_text): ditto
	(gedit_document_replace_all): ditto

	* gedit-document.h: added prototypes for new public functions (see gedit-document.c log)
	
	* dialogs/gedit-dialog-replace.c: added support for replace; find and replace dialog are no more
	modal
