@@ -1,3 +1,9 @@
+2002-01-04  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-print.c (gedit_print_get_next_line_to_print_delimiter): 
+	little improvement in precision. It is still not so precise as I would
+	like
+
 2002-01-03  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-document.c (gedit_document_save_as_real): create
